# psql-backuper

./: .env.example  .gitignore  Cargo.toml
src/: config.rs  legacy.rs  main.rs  postgres.rs  webhook.rs
