[package]
name = "psql-backuper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.27", features = ["derive"]}
dotenv = "0.15.0"
postgresql_commands = { version = "0.9.1", features = ["tokio"] }
regex = "1.10.4"
serde_json = "1.0.117"
serenity = { version = "0.12.1", features = ["model"] }
tokio = { version = "1.37.0", features = [ "rt-multi-thread", "macros", "rt", "sync" ] }
